--- a/src/pages/Components/Header/styles.module.scss
+++ b/src/pages/Components/Header/styles.module.scss
@@ -24,7 +24,7 @@
             line-height: 5rem;
             color: var(--gray-300);
 
-            transition: color 0s;
+            transition: color 0.2s;
 
             &+a {
                 margin-left: 2rem;
@@ -50,5 +50,9 @@
                 background: var(--yelow-500);
             }
         }
+    }
+
+    button {
+        margin-left: auto;
     }
 }
