--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -2,7 +2,7 @@
     max-width: 1120px;
     margin: 0 auto;
     padding: 0 2rem;
-    height: calc(100vh - 5rem);
+    height: calc(100vh - 5rem); //altura seja a altura total - 5rem
 
     display: flex;
     align-items: center;
@@ -26,19 +26,18 @@
         span {
             color: var(--cyan-500);
         }
+    }
 
-        p {
-            font-size: 1.5rem;
-            line-height: 2.25rem;
-            margin-top: 1.5rem;
+    p {
+        font-size: 1.5rem;
+        line-height: 2.25rem;
+        margin-top: 1.5rem;
 
-            span {
-                color: var(--cyan-500);
-                font-weight: bold;
-
-            }
-
+        span {
+            color: var(--cyan-500);
+            font-weight: bold;
         }
+
     }
 
     button {
